Fix project containers alignment

--- a/site/src/styles/details/_grid.scss
+++ b/site/src/styles/details/_grid.scss
@@ -54,7 +54,7 @@ body {
   display: flex;
   justify-content: space-around;
   flex-flow: column wrap;
-  align-content: flex-start;
+  // align-content: flex-start;
   max-height: 100%;
   width: 100%;
 }
